<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sws@todo.todo">sws</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_control_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
